php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21229 Won't compile with roxen options
Submitted: 2002-12-27 19:40 UTC Modified: 2002-12-28 12:03 UTC
From: snyggve at canit dot se Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.3.0 OS: Debian 2.2
Private report: No CVE-ID: None
 [2002-12-27 19:40 UTC] snyggve at canit dot se
./configure --with-roxen=/usr/local/roxen/server

compiled 4.2.3 yesterday, install worked great. Had to 
upgrade to 4.3.0 because of the setcookie() bug.

configure runs perfectly, in the end of the make-procedure, 
it quits. Wont make install either.

roxen.c -o sapi/roxen/roxen.lo 
/php-4.3.0/sapi/roxen/roxen.c: In function 
`php_roxen_startup':
/php-4.3.0/sapi/roxen/roxen.c:476: too few arguments to 
function `php_module_startup'
make: *** [sapi/roxen/roxen.lo] Error 1
mactorget:/php-4.3.0# cd /usr/local/roxen/server/

Me -> :(

Solution?

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-12-28 00:59 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 [2002-12-28 11:43 UTC] snyggve at canit dot se
Well, still compiling trouble :(

/bin/sh libtool --silent --mode=compile gcc  -Isapi/roxen/ 
-I/php4-STABLE-200212281630/sapi/roxen/ -DPHP_ATOM_INC -I/
php4-STABLE-200212281630/include -I/php4-STABLE-
200212281630/main -I/php4-STABLE-200212281630 -I/usr/local/
pike/7.0.352/include/pike -I/php4-STABLE-200212281630/Zend 
-I/php4-STABLE-200212281630/ext/xml/expat  -I/php4-STABLE-
200212281630/TSRM  -g -O2  -prefer-pic -c /php4-STABLE-
200212281630/sapi/roxen/roxen.c -o sapi/roxen/roxen.lo 
/php4-STABLE-200212281630/sapi/roxen/roxen.c: In function 
`php_roxen_startup':
/php4-STABLE-200212281630/sapi/roxen/roxen.c:476: too few 
arguments to function `php_module_startup'
make: *** [sapi/roxen/roxen.lo] Error 1
mactorget:/php4-STABLE-200212281630# 

Me still -> :(
 [2002-12-28 11:52 UTC] iliaa@php.net
The fix was added to the unstable 4.4.0-dev version, try that.
 [2002-12-28 12:03 UTC] snyggve at canit dot se
Ok, 4.4 cvs worked, but everything else failed :( so, im 
reverting to 4.2.3 for the moment

everything else = pages wont load on the homepage (a 
connection error occured) static pages worked though!

Rgds,
F
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 09:00:01 2026 UTC