Fixed bug #21229 (missing 3rd argument to php_module_startup).